tests/paczka1/small_fuzzy/93411440.err
Error in line 12: ww7pgES S759 15,0
Error in line 15: A834 A834 1j6,4
